# video-security-analysis-for-pam-using-generative-ai

./: .gitignore  README.md  app.py  cdk.json  requirements.txt  workflow-description.txt
cfn/: deploy_stack.py
lambdas/aggregate_transcripts/: aggregate_transcripts.py
lambdas/aggregate_transcripts/lib/: summary_converse.py
lambdas/create_still_frame_images/: create_still_frame_images.py
lambdas/layers/boto3-layer/: .gitignore  requirements.txt
lambdas/layers/ffmpeg-layer/: .gitignore  build.ps1  build.sh
lambdas/transcribe_images/: transcribe_images.py
lambdas/transcribe_images/lib/: transcribe_images_converse.py
prompts/security_analysis/: security_analysis_prompt.json
prompts/transcribe/: aggregate_prompt.json  analysis_prompt.json
tests/: image_analysis_event.json  tests-with-sam.txt
ui/: pyproject.toml
ui/ui/: app.py
