[project]
authors = [{name = "Rim Zaafouri", email = "rimzaaf@amazon.com"}]
dependencies = []
description = "Add a short description here"
name = "ui"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ui = { path = ".", editable = true }

[tool.pixi.tasks]
start = "streamlit run ui/app.py"

[tool.pixi.dependencies]
streamlit = ">=1.38.0,<2"
boto3 = ">=1.35.28,<2"
pandas = ">=2.2.3,<3"
